@@ -315,24 +315,7 @@ Function global:RefreshServerJar
 
 Function global:CleanServerFiles
 {
-    $FilesToRemove = @(
-        "libraries"
-        "run.sh"
-        "run.bat"
-        "*installer.jar"
-        "*installer.jar.log"
-        "server.jar"
-        ".mixin.out"
-        "ldlib"
-        "local"
-        "fabric-server-launcher.jar"
-        "fabric-server-launch.jar"
-        ".fabric-installer"
-        "fabric-installer.jar"
-        "legacyfabric-installer.jar"
-        ".fabric"
-        "versions"
-    )
+    $FilesToRemove = ${Cleanup}
     $ErrorActionPreference = "SilentlyContinue";
     ForEach ($FileToRemove in $FilesToRemove) {
         Remove-Item "${FileToRemove}" -Recurse -Verbose -ErrorAction SilentlyContinue
@@ -394,7 +377,7 @@ Function global:SetupForge
         }
         else
         {
-            $script:ServerRunCommand = "@user_jvm_args.txt -Djava.security.manager=allow -jar server.jar --installer-force --installer ${ForgeInstallerUrl} nogui"
+            $script:ServerRunCommand = "@user_jvm_args.txt ${SSJForgeArgs} -jar server.jar --installer-force --installer ${ForgeInstallerUrl} nogui"
             # Download ServerStarterJar to server.jar
             RefreshServerJar
         }
@@ -642,21 +625,25 @@ $ModLoaderVersion = $ExternalVariables['MODLOADER_VERSION']
 $LegacyFabricInstallerVersion = $ExternalVariables['LEGACYFABRIC_INSTALLER_VERSION']
 $FabricInstallerVersion = $ExternalVariables['FABRIC_INSTALLER_VERSION']
 $QuiltInstallerVersion = $ExternalVariables['QUILT_INSTALLER_VERSION']
-$JavaArgs = $ExternalVariables['JAVA_ARGS']
 $Java = $ExternalVariables['JAVA']
 $WaitForUserInput = $ExternalVariables['WAIT_FOR_USER_INPUT']
+$JavaArgs = $ExternalVariables['JAVA_ARGS']
 $AdditionalArgs = $ExternalVariables['ADDITIONAL_ARGS']
+$SSJForgeArgs = $ExternalVariables['SSJ_FORGE_ARGS']
 $Restart = $ExternalVariables['RESTART']
 $SkipJavaCheck = $ExternalVariables['SKIP_JAVA_CHECK']
 $RecommendedJavaVersion = $ExternalVariables['RECOMMENDED_JAVA_VERSION']
 $ServerStarterJarForceFetch = $ExternalVariables['SERVERSTARTERJAR_FORCE_FETCH']
 $ServerStarterJarVersion = $ExternalVariables['SERVERSTARTERJAR_VERSION']
 $UseSSJ = $ExternalVariables['USE_SSJ']
+$Cleanup = $ExternalVariables['CLEANUP'].Split(",")
 $LauncherJarLocation = "do_not_manually_edit"
 $ServerRunCommand = "do_not_manually_edit"
 $JavaVersion = "do_not_manually_edit"
 $Semantics = ${MinecraftVersion}.Split(".")
 
+
+# Clears the "" from the beginning and end of the Java, JavaArgs, AdditionalArgs, SSJArgs vars
 if ($Java[0] -eq '"')
 {
     $Java = $Java.Substring(1, $Java.Length - 1)
@@ -672,6 +659,22 @@ if ($JavaArgs[0] -eq '"')
 if ($JavaArgs[$JavaArgs.Length - 1] -eq '"')
 {
     $JavaArgs = $JavaArgs.Substring(0, $JavaArgs.Length - 1)
+}
+if ($AdditionalArgs[0] -eq '"')
+{
+    $AdditionalArgs = $AdditionalArgs.Substring(1, $AdditionalArgs.Length - 1)
+}
+if ($AdditionalArgs[$AdditionalArgs.Length - 1] -eq '"')
+{
+    $AdditionalArgs = $AdditionalArgs.Substring(0, $AdditionalArgs.Length - 1)
+}
+if ($SSJForgeArgs[0] -eq '"')
+{
+    $SSJForgeArgs = $SSJForgeArgs.Substring(1, $SSJForgeArgs.Length - 1)
+}
+if ($SSJForgeArgs[$SSJForgeArgs.Length - 1] -eq '"')
+{
+    $SSJForgeArgs = $SSJForgeArgs.Substring(0, $SSJForgeArgs.Length - 1)
 }
 
 # If Java checks are desired, then the available Java version is compared to the one required by the Minecraft server.
@@ -753,13 +756,13 @@ elseif (Test-Path -Path $PreviousRunFile -PathType Leaf)
 
 switch (${ModLoader})
 {
-    Forge
-    {
-        SetupForge
-    }
     NeoForge
     {
         SetupNeoForge
+    }
+    Forge
+    {
+        SetupForge
     }
     Fabric
     {
@@ -807,6 +810,7 @@ if (!(Test-Path -Path 'eula.txt' -PathType Leaf))
 "Quilt Installer Version:        ${QuiltInstallerVersion}"
 "Java Args:                      ${JavaArgs}"
 "Additional Args:                ${AdditionalArgs}"
+"SSJ Forge Args:                 ${SSJForgeArgs}"
 "Java Path:                      ${Java}"
 "Wait For User Input:            ${WaitForUserInput}"
 if (!("${LauncherJarLocation}" -eq "do_not_manually_edit"))
